code-server/code-server-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: code-server
  namespace: code-server
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        certificateRefs:
          - kind: Secret
            group: ""
            name: code-server-certificate
