code-server/code-server-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server
  namespace: code-server
spec:
  parentRefs:
    - name: code-server
      sectionName: http
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - code-server.raft.lutris.house
  rules:
    - backendRefs:
        - name: code-server
          port: 8080
          kind: Service
          group: ""
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
